--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import-normalize;
+/* bring in normalize.css styles */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,164 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.avatar {
+  width: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border-radius: 50%;
+  background-color: white;
+  padding: 4px;
+}
+
+.description {
+  background-color: rgb(182, 186, 238);
+  padding: 48px;
+  border-top-right-radius: 16px;
+  border-top-left-radius: 16px;
+}
+
+.name {
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.tag {
+  margin-bottom: 0;
+  margin-top: 12px;
+  color: rgb(78, 75, 107);
+  font-size: 32px;
+  text-align: center;
+}
+
+.location {
+  margin-bottom: 0;
+  margin-top: 12px;
+  color: rgb(78, 75, 107);
+  font-size: 36px;
+  text-align: center;
+}
+
+.stats {
+  margin: 0;
+  background-color: rgb(228, 230, 255);
+  border-bottom-right-radius: 16px;
+  border-bottom-left-radius: 16px;
+
+  display: flex;
+  list-style: none;
+  padding: 25px;
+  gap: 12px;
+  justify-content: stretch;
+}
+
+.stats li {
+  width: 160px;
+  font-size: 36px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.middle {
+  border-left: 2px solid rgb(147, 147, 148);
+  border-right: 2px solid rgb(147, 147, 148);
+}
+
+.stats-label {
+  color: rgb(78, 75, 107);
+  margin-bottom: 4px;
+  font-size: 28px;
+}
+
+.quantity {
+  color: black;
+  font-size: 32px;
+  font-weight: 500;
+}
+
+/*Stats*/
+
+.statistics {
+  margin-left: 40px;
+  text-align: center;
+  background-color: rgb(240, 240, 240);
+}
+
+.stat-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.stat-list li {
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: white;
+  padding: 16px;
+  background-color: magenta;
+}
+
+.stat-list li:nth-child(2) {
+  background-color: rgb(25, 0, 255);
+}
+
+.stat-list li:nth-child(3) {
+  background-color: rgb(255, 196, 0);
+}
+
+.stat-list li:nth-child(4) {
+  background-color: rgb(72, 255, 0);
+}
+
+.stat-list li:nth-child(5) {
+  background-color: rgb(255, 153, 0);
+}
+
+.label {
+  color: white;
+}
+
+/*Friends*/
+
+.friend-list {
+  margin-left: 40px;
+  list-style: none;
+  display: flex;
+  gap: 24px;
+  max-width: 400px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+/* FriendList.css */
+
+.status {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.online {
+  background-color: green;
+}
+
+.name {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.offline {
+  background-color: red;
 }
