--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ code {
   border-top-left-radius: 16px;
 }
 
-.name {
+.profile-name {
   font-weight: 500;
   text-align: center;
   margin-bottom: 0;
@@ -151,8 +151,6 @@ code {
   align-items: center;
 }
 
-/* FriendList.css */
-
 .status {
   width: 20px;
   height: 20px;
@@ -173,4 +171,27 @@ code {
 
 .offline {
   background-color: red;
+}
+
+/* transaction */
+
+.transaction-history {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 70px;
+}
+
+.transaction-history th,
+.transaction-history td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.transaction-history th {
+  background-color: #f2f2f2;
+}
+
+.item {
+  background-color: #f9f9f9;
 }
